--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
       <h1>Quarterly Earnings Report</h1>
       <p class="subtitle">Interactive presentation with RevealJS</p>
-      <p><strong>Contact:</strong> 24f1002302@ds.study.iitm.ac.in</p>
+      <p><strong>email:</strong> 24f1002302@ds.study.iitm.ac.in</p>
       <aside class="notes">
         Welcome stakeholders. Use arrow keys (or click) to navigate. Press <kbd>S</kbd> for speaker view.
       </aside>
@@ -50,3 +50,4 @@
 </script>
 </body>
 </html>
+
