--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
     <section data-markdown="slides.md" data-separator="^---$" data-separator-vertical="^--$" data-charset="utf-8"></section>
   </div>
 </div>
+<div class="footer">
+  24f1002302@ds.study.iitm.ac.in
+</div>
+
+<style>
+.footer {
+  position: fixed;
+  bottom: 10px;
+  right: 20px;
+  font-size: 14px;
+  color: gray;
+}
+</style>
+
 
 <!-- Reveal.js core + plugins -->
 <script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js"></script>
@@ -50,4 +64,5 @@
 </script>
 </body>
 </html>
+
 
