--- a/index.html
+++ b/index.html
@@ -17,13 +17,26 @@
   </style>
 </head>
 <body>
+  <script>
+
+    const email = 24f1002302@ds.study.iitm.ac.in;
+
+    document.write('<p>Prepared by: ' + email + '</p>');
+
+</script>
+
+<noscript>
+
+    <p>Prepared by: your_email@ds.study.iitm.ac.in</p>
+
+</noscript>
 <div class="reveal">
   <div class="slides">
     <!-- Title -->
     <section>
       <h1>Quarterly Earnings Report</h1>
       <p class="subtitle">Interactive presentation with RevealJS</p>
-      <p><strong>email:</strong> 24f1002302@ds.study.iitm.ac.in</p>
+      <p><strong>email:</strong>24f1002302@ds.study.iitm.ac.in</p>
       <aside class="notes">
         Welcome stakeholders. Use arrow keys (or click) to navigate. Press <kbd>S</kbd> for speaker view.
       </aside>
@@ -64,5 +77,6 @@
 </script>
 </body>
 </html>
+
 
 
